# openapi.json
@@ -1558,14 +1558,7 @@
         },
         "responses": {
           "201": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
+            "description": ""
           }
         },
         "tags": [
@@ -2433,7 +2426,22 @@
       },
       "CreateRoleDto": {
         "type": "object",
-        "properties": {}
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "permissionNames": {
+            "default": [],
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        },
+        "required": [
+          "name",
+          "permissionNames"
+        ]
       },
       "UpdatePermissionOfRoleDto": {
         "type": "object",
@@ -2480,7 +2488,18 @@
       },
       "UpdateRoleDto": {
         "type": "object",
-        "properties": {}
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "permissionNames": {
+            "default": [],
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        }
       },
       "CreateRoleHasPermissionDto": {
         "type": "object",
